tests/variant_flow/structured/vf_diagnostic_spans.err.expected
error: at 24:5: [VF-DowncastVariantNotRefined] In function 'downcast_variant_not_refined_at_stmt_span', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 23 |   entry:
 24 |     x = copy o as Some;
    |     ^^^^^^^^^^^^^^^^^^
 25 |     return
    |
error: at 35:5: [VF-SwitchArmFalselyUnreachable] In function 'switch_arm_falsely_unreachable_at_terminator_span', block 'entry': switchEnum arm for variant 'Some' claims unreachable but variant is reachable at this point
    |
 34 |   entry:
 35 |     switchEnum(o) [None: n, Some: dead]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 36 |   n: return
    |
error: at 46:5: [VF-SwitchDuplicateArm] In function 'switch_duplicate_arm_at_terminator_span', block 'entry': switchEnum has duplicate arm for variant 'None'
    |
 45 |   entry:
 46 |     switchEnum(o) [None: a, None: b, Some: c]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 47 |   a: return
    |
error: at 58:5: [VF-SwitchNotExhaustive] In function 'switch_not_exhaustive_at_terminator_span', block 'entry': switchEnum on 'Option' does not handle variant 'Some'
    |
 57 |   entry:
 58 |     switchEnum(o) [None: end]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^
 59 |   end: return
    |
